--- a/src/components/Page/page.scss
+++ b/src/components/Page/page.scss
@@ -2,22 +2,41 @@
 
    &__container {
       display: flex;
-      flex-direction: row;
+      flex-direction: column;
       width: 90%;
       margin: 0 auto;
       margin-top: 50px;
-      gap: 50px;
+      gap: 30px;
    }
 
-   &__form-empl {
+   &__form {
       display: flex;
       flex-direction: column;
-      gap: 10px;
+      gap: 5px;
       padding: 10px;
+      align-items: center;
+      margin-top: 30px;
    }
 
-   h3 {
-      margin: 0;
+   &__input {
+      width: 350px;
+      background: #FFFFFF;
+      border: none;
+      border-radius: 100px;
+      color: dimgrey;
+      padding: 10px;
+      font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+   }
+
+   &__button {
+      width: 150px;
+      background: #FFFFFF;
+      border: none;
+      box-shadow: 0px 4px 20px rgb(0 0 0 / 8%);
+      border-radius: 100px;
+      margin-bottom: 10px;
+      color: dimgrey;
+      padding: 10px;
    }
 
 
@@ -26,28 +45,71 @@
       text-align: center;
       border-collapse: collapse;
       border-spacing: 5px;
-      background: #E1E3E0;
       border-radius: 20px;
       padding: 10px;
+      background-color: #E1E3E0;
    }
 
-   th {
-      font-size: 22px;
+   h3 {
+      font-size: 30px;
       font-weight: 300;
       padding: 15px 20px;
-      border-bottom: 2px solid #F56433;
-      color: #F56433;
+      margin: 0;
+      font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+      color: #8D8173;
+      white-space: nowrap;
    }
 
    thead tr {
-      border-bottom: 2px solid #F56433;
       width: 100%;
       text-align: left;
    }
 
-   td {
+   td,
+   label {
       color: #8D8173;
       text-align: left;
       padding: 15px 20px;
+      font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
    }
+}
+
+.modal {
+   height: 100vh;
+   width: 100vw;
+   background-color: rgba(255, 255, 255, 0.4);
+   position: fixed;
+   top: 0;
+   left: 0;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   transition: 0.5s;
+   opacity: 1;
+   pointer-events: all;
+   font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+
+   &__content {
+      padding: 20px;
+      border-radius: 15px;
+      background-color: #E1E3E0;
+      width: 50vw;
+      transition: 0.4s all;
+      width: 500px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+   }
+}
+
+.companies button,
+.employees button {
+   width: 150px;
+   background: #FFFFFF;
+   border-radius: 100px;
+   margin-bottom: 10px;
+   color: #8D8173;
+   padding: 10px;
+   font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+   border: 2px solid #8D8173;
 }
