--- a/src/components/Page/page.scss
+++ b/src/components/Page/page.scss
@@ -7,6 +7,7 @@
       margin: 0 auto;
       margin-top: 50px;
       gap: 30px;
+      margin-bottom: 50px;
    }
 
    &__form {
@@ -16,18 +17,20 @@
       padding: 10px;
       align-items: center;
       margin-top: 30px;
+
       &-add {
          margin-top: 0;
          gap: 15px;
       }
    }
 
-   &__input, select {
+   &__input,
+   select {
       width: 350px;
       background: #FFFFFF;
       border: none;
       border-radius: 100px;
-      color: dimgrey;
+      color: #8D8173;
       padding: 10px;
       font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
    }
@@ -39,7 +42,7 @@
       box-shadow: 0px 4px 20px rgb(0 0 0 / 8%);
       border-radius: 100px;
       margin-bottom: 10px;
-      color: dimgrey;
+      color: #8D8173;
       padding: 10px;
 
       &-title {
@@ -50,47 +53,11 @@
       }
    }
 
-
-   table {
-      font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
-      text-align: center;
-      border-collapse: collapse;
-      border-spacing: 5px;
-      border-radius: 20px;
-      padding: 10px;
-      background-color: #E1E3E0;
-   }
-
-   h3 {
-      font-size: 30px;
-      font-weight: 300;
-      padding: 15px 20px;
-      margin: 0;
-      font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
-      color: #8D8173;
-      white-space: nowrap;
-   }
-
-   h4 {
-      font-size: 20px;
-      font-weight: 300;
-      margin: 0;
-      font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
-      color: #8D8173;
-      white-space: nowrap;
-   }
-
-   thead tr {
-      width: 100%;
-      text-align: left;
-   }
-
-   td,
-   label {
-      color: #8D8173;
-      text-align: left;
-      padding: 15px 20px;
-      font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+   &__buttons {
+      margin-top: 20px;
+      margin-left: 20px;
+      display: flex;
+      gap: 20px;
    }
 }
 
@@ -132,4 +99,46 @@
    padding: 10px;
    font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
    border: 2px solid #8D8173;
+}
+
+table {
+   font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+   text-align: center;
+   border-collapse: collapse;
+   border-spacing: 5px;
+   border-radius: 20px;
+   padding: 10px;
+   background-color: #E1E3E0;
+}
+
+h3 {
+   font-size: 30px;
+   font-weight: 300;
+   padding: 15px 20px;
+   margin: 0;
+   font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+   color: #8D8173;
+   white-space: nowrap;
+}
+
+h4 {
+   font-size: 20px;
+   font-weight: 300;
+   margin: 0;
+   font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+   color: #8D8173;
+   white-space: nowrap;
+}
+
+thead tr {
+   width: 100%;
+   text-align: left;
+}
+
+td,
+label {
+   color: #8D8173;
+   text-align: left;
+   padding: 15px 20px;
+   font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
 }
