--- a/src/components/Page/table.scss
+++ b/src/components/Page/table.scss
@@ -1,13 +1,15 @@
+.page__container {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 50px;
+  gap: 30px;
+  margin-bottom: 50px;
+}
+
+
 .table {
-  &__container {
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    margin: 0 auto;
-    margin-top: 50px;
-    gap: 30px;
-    margin-bottom: 50px;
-  }
 
   &__form {
     display: flex;
